<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="btn7_text">7</string>
    <string name="btn8_text">8</string>
    <string name="textView_text"></string>
    <string name="btn3_text">3</string>
    <string name="btn2_text">2</string>
    <string name="btn1_text">1</string>
    <string name="btn6_text">6</string>
    <string name="btn5_text">5</string>
    <string name="btn4_text">4</string>
    <string name="btnX_text">X</string>
    <string name="btn9_text">9</string>
    <string name="btn_divide_text">/</string>
    <string name="btn_clear_text">C</string>
    <string name="btn_signs_text">+/-</string>
    <string name="btn_minus_text">-</string>
    <string name="btn_plus_text">+</string>
    <string name="btn0_text">0</string>
    <string name="btn_dot_text">.</string>
    <string name="btn_equals_text">=</string>

</resources>
