<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/wood">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/tableLayout"
        android:stretchColumns="*">

        <TableRow
            android:layout_weight="11"
            android:gravity="center">
            <ScrollView
                android:id="@+id/scrollable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:fillViewport="true"
                android:layout_span="4">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/textView_text"
                    android:id="@+id/textView"
                    android:textSize="@dimen/abc_action_button_min_width_overflow_material"
                    android:layout_alignParentTop="true"
                    android:nestedScrollingEnabled="true"
                    android:layout_alignParentStart="true"
                    android:maxLines="4"
                    android:minLines="4"
                    android:scrollbars = "vertical"
                    android:layout_span="4"
                    android:maxHeight="@dimen/abc_action_bar_stacked_tab_max_width" />
            </ScrollView>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/app_name"
                android:id="@+id/btn_app_name"
                android:layout_column="0"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:layout_span="2"
                android:textAppearance="@color/accent_material_light"
                android:enabled="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn_clear_text"
                android:id="@+id/btn_clear"
                android:layout_column="2"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btnX_text"
                android:id="@+id/btnX"
                android:layout_column="3"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn7_text"
                android:id="@+id/btn7"
                android:layout_column="0"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn8_text"
                android:id="@+id/btn8"
                android:layout_column="1"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn9_text"
                android:id="@+id/btn9"
                android:layout_column="2"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn_divide_text"
                android:id="@+id/btn_divide"
                android:layout_column="3"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn4_text"
                android:id="@+id/btn4"
                android:layout_column="0"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn5_text"
                android:id="@+id/btn5"
                android:layout_column="1"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn6_text"
                android:id="@+id/btn6"
                android:layout_column="2"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn_plus_text"
                android:id="@+id/btn_plus"
                android:layout_column="3"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn1_text"
                android:id="@+id/btn1"
                android:layout_column="0"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn2_text"
                android:id="@+id/btn2"
                android:layout_column="1"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn3_text"
                android:id="@+id/btn3"
                android:layout_column="2"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn_minus_text"
                android:id="@+id/btn_minus"
                android:layout_column="3"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

        </TableRow>

        <TableRow
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn0_text"
                android:id="@+id/btn0"
                android:layout_column="0"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn_dot_text"
                android:id="@+id/btn_dot"
                android:layout_column="1"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick"  />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn_signs_text"
                android:id="@+id/btn_signs"
                android:layout_column="2"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/btn_equals_text"
                android:id="@+id/btn_equals"
                android:layout_column="3"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:onClick="onClick" />
        </TableRow>

    </TableLayout>


</LinearLayout>




